# plasma-sims

fortran/: mebot.f90
fortran/mebotplayground/: mebot.f90  testing.ex  testing.f90
fortran/modules/: drixit.f90  main.f90  problemsetup.f90  problemsetup.mod  test.init  timestep.f90  utility.f90  utility.mod
plasma-env/: README.md  pyproject.toml
plasma-env/tests/: test.ipynb
