[tool.poetry]
name = "plasma-env"
version = "0.1.0"
description = ""
authors = ["Drixitel <mpmunoz1993@gmail.com>"]
readme = "README.md"
packages = [{include = "plasma_env"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
notebook = "^6.5.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
